Add Appium support for Selenium 4 Grid (#274)